fix awards cut off when wrapped
edge case but might as well

--- a/static/css/style_domino-pieces.css
+++ b/static/css/style_domino-pieces.css
@@ -370,7 +370,7 @@ picture>img {
 
 .award {
     width: 315px;
-    height: calc(250px + var(--award-height, 300px));
+    min-height: calc(250px + var(--award-height, 300px));
 
     display: flex;
     flex-direction: column;
